--- a/simplicity/index.html
+++ b/simplicity/index.html
@@ -17,7 +17,9 @@
         <div class="limitador">
             <h1><a href="index.html">Simplicity</a></h1>
             <nav>
-                <h2><a href="">Menu &equiv; </a></h2>
+                <h2>
+                    <a href="" class="icone">Menu &equiv; </a>
+                </h2>
 
                 <ul class="links-menu">
                     <li><a href="index.html">Home</a></li>
@@ -67,5 +69,7 @@
         <p>Simplicity é um site fictício desenvolvido educacionalmente
         <br>Senac Penha - 2022 </p>
     </footer>
+
+    <script src="js/menu.js"></script>
 </body>
 </html>
