--- a/simplicity/contato.html
+++ b/simplicity/contato.html
@@ -90,6 +90,34 @@
                     <label for="programacao">Programação</label>
                 </div>
 
+
+                <!-- INÍCIO HTML PARA CEP/ENDEREÇO -->
+                <div>
+                    <label for="cep">CEP:</label>
+                    <input type="text" id="cep" name="cep" maxlength="9" required>
+                    <button id="localizar-cep">Localizar</button>
+                    <b id="status"></b>
+                </div>
+                <div>
+                    <label for="endereco">Endereço:</label>
+                    <input type="text" id="endereco" name="endereco" size="30">
+                </div>
+                <div>
+                    <label for="bairro">Bairro:</label>
+                    <input type="text" id="bairro" name="bairro">
+                </div>
+                <div>
+                    <label for="cidade">Cidade:</label>
+                    <input type="text" id="cidade" name="cidade">
+                </div>
+                <div>
+                    <label for="estado">Estado:</label>
+                    <input type="text" id="estado" name="estado">
+                </div>
+                <!-- /FIM HTML PARA CEP/ENDEREÇO -->
+
+
+
                 <div>
                     <label for="assunto">Assunto:</label>
                     <select name="assunto" id="assunto">
@@ -122,6 +150,11 @@
         <br>Senac Penha - 2022 </p>
     </footer>
 
+    <!-- Importação da Lib (precisa vir primeiro) -->
+    <script src="js/vanilla-masker.min.js"></script>
+
     <script src="js/menu.js"></script>
+
+    <script src="js/scripts.js"></script>
 </body>
 </html>
