Contador de caracteres

--- a/simplicity/contato.html
+++ b/simplicity/contato.html
@@ -130,8 +130,10 @@
                 </div>
 
                 <div>
-                    <label for="mensagem">Mensagem:</label> <br>
-                    <textarea name="mensagem" id="mensagem" cols="20" rows="5"></textarea>
+                    <label for="mensagem">Mensagem: 
+                        <span id="maximo"> (restam <b id="caracteres">100</b> caracteres)</span>
+                    </label> <br>
+                    <textarea maxlength="100" name="mensagem" id="mensagem" cols="20" rows="5"></textarea>
                 </div>
 
                 <button type="submit">Enviar dados</button>
