Aplicação da API formspree

--- a/simplicity/contato.html
+++ b/simplicity/contato.html
@@ -40,7 +40,7 @@
             <p>Incidunt illum, voluptatem reprehenderit quibusdam minus temporibus rem fugiat odit earum ipsum ratione excepturi quasi fugit suscipit libero, recusandae repellat culpa. Aspernatur natus omnis ad aperiam magnam suscipit, praesentium quasi.</p>
            
 
-            <form action="" method="post">
+            <form id="my-form" action="https://formspree.io/f/mrgjydnw" method="post">
                 <div>
                     <label for="nome">Nome:</label>
                     <input type="text" name="nome" id="nome" required>
@@ -137,6 +137,8 @@
                 </div>
 
                 <button type="submit">Enviar dados</button>
+
+                <p id="my-form-status"></p>
 
                 <!-- Pode ser assim também: -->
                 <!-- <input type="button" value="Enviar dados"> -->
