--- a/simplicity/contato.html
+++ b/simplicity/contato.html
@@ -70,23 +70,23 @@
                 <div>
                     <p>Sexo:</p>
                     
-                    <input type="radio" name="sexo" id="masculino">
+                    <input value="Masculino" type="radio" name="sexo" id="masculino">
                     <label for="masculino">Masculino</label>
 
-                    <input type="radio" name="sexo" id="feminino">
+                    <input value="Feminino" type="radio" name="sexo" id="feminino">
                     <label for="feminino">Feminino</label>
                 </div>
 
                 <div>
                     <p>Interesses:</p>
                     
-                    <input type="checkbox" name="interesses" id="design">
+                    <input value="Design" type="checkbox" name="interesses" id="design">
                     <label for="design">Design</label>
 
-                    <input type="checkbox" name="interesses" id="marketing">
+                    <input value="Marketing" type="checkbox" name="interesses" id="marketing">
                     <label for="marketing">Marketing</label>
 
-                    <input type="checkbox" name="interesses" id="programacao">
+                    <input value="Programação" type="checkbox" name="interesses" id="programacao">
                     <label for="programacao">Programação</label>
                 </div>
 
